--- a/content.yml
+++ b/content.yml
@@ -1,17 +1,25 @@
 book:
-    title: "Guide du core développeur Dynacase"
+    title: "Guide du contributeur Dynacase"
     module: "Anakeen"
     version: "2012"
     edition: "1"
     githubsrc: "https://github.com/txiki31/dev-guide.git"
     chapters: 
-        - number:  "1"
+        - level:  "1"
           content: "introduction.md"        
-        - number:  "2"
-          content: "tracker.md"
-        - number:  "3" 
-          content: "coding-rules.md"
-        - number:  "4" 
-          content: "using-github.md"
-        - number:  "A1" 
-          content: "writing-markdown.md"
+        - level:  "1" 
+          content: "coding.md"
+        - level:  "2"
+          content: "coding/tracker.md"
+        - level:  "2" 
+          content: "coding/coding-rules.md"
+        - level:  "2" 
+          content: "coding/using-github.md"
+        - level:  "2" 
+          content: "coding/automatic-test.md"
+        - level:  "1" 
+          content: "documentation.md"
+        - level:  "2" 
+          content: "documentation/vocabulaire.md"        
+        - level:  "2" 
+          content: "documentation/outillage.md"
