add more and more informations

--- a/content.yml
+++ b/content.yml
@@ -3,23 +3,46 @@ book:
     module: "Anakeen"
     version: "2012"
     edition: "1"
-    githubsrc: "https://github.com/txiki31/dev-guide.git"
+    githubsrc: "https://github.com/Anakeen/dynacase-dev-guide.git"
     chapters: 
+#
         - level:  "1"
           content: "introduction.md"        
+#
+        - level:  "1" 
+          content: "configuration-tracker.md"
+        - level:  "2" 
+          content: "configuration-tracker/gestion-des-sources.md"
+        - level:  "2" 
+          content: "configuration-tracker/gestion-des-demandes.md"
+        - level:  "2"
+          content: "configuration-tracker/product-rules.md"
+# 
         - level:  "1" 
           content: "coding.md"
-        - level:  "2"
-          content: "coding/tracker.md"
         - level:  "2" 
           content: "coding/coding-rules.md"
         - level:  "2" 
           content: "coding/using-github.md"
+        - level:  "2"
+          content: "coding/tracker.md"
+#
+        - level:  "1"
+          content: "tester.md"        
         - level:  "2" 
-          content: "coding/automatic-test.md"
+          content: "tester/automatic-test.md"
+#
         - level:  "1" 
           content: "documentation.md"
         - level:  "2" 
-          content: "documentation/vocabulaire.md"        
+          content: "documentation/regles.md"        
+        - level:  "2" 
+          content: "documentation/guide-redaction.md"
         - level:  "2" 
           content: "documentation/outillage.md"
+#
+    appendixes: 
+        - number:  "A1" 
+          content: "appendix/utilisation-doc-builder.md"
+        - number:  "A2" 
+          content: "appendix/markdown.md"
